# doors

./: .clang-format  .clang-tidy  .cppcheck  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NOTES  NOTES.md  README.md  build.sh  clean.sh  config.sh  default-host.sh  grub-crash.cfg.in  grub-test.cfg  grub.cfg  grub.cfg.in
kernel/: CMakeLists.txt  Makefile  kernel.cpp
kernel/arch/i386/: Arch.cc  Arch.cpp  Boot.s  Cpu.cc  Cpu.cpp  ExceptionHandlers.cc  ExceptionHandlers.cpp  Gdt.cc  Gdt.cpp  Idt.cc  Idt.cpp  InterruptHandlers.cc  InterruptHandlers.cpp  Io.cc  Io.cpp  Isr.s  Kbd.cc  Kbd.cpp  Linker.ld  Make.config  Paging.cc  Pic.cc  Pic.cpp  Pit.cc  Pit.cpp  Tty.cc  Tty.cpp  Vga.cc  arch.cpp  boot.s  cpu.cpp  gdt.cpp  idt.cpp  inthndl.cpp  irq.cpp  isr.s  kbd.cpp  make.config  mem.cpp  pic.cpp  (+1 more)
kernel/include/kernel/: Acpi.h  Arch.h  Backtrace.h  Bda.h  Cmos.h  Commands.h  Cpu.h  Elf32.h  ElfLoader.h  Heap.h  InterruptGuard.h  Io.h  Kbd.h  Keymap.h  Mem.h  Multiboot.h  Panic.h  Pit.h  Pmm.h  Runtime.h  Scancodes.h  Scheduler.h  Semaphore.h  Serial.h  Shell.h  Symbols.h  Syscall.h  Task.h  Taskbar.h  Tty.h  Version.h  Vga.h  arch.h  bda.h  cpu.h  irq.h  kbd.h  mem.h  tty.h  version.h  (+1 more)
kernel/kernel/: Acpi.cc  Acpi.cpp  Backtrace.cc  Cmos.cc  Cmos.cpp  Commands.cc  Commands.cpp  ElfLoader.cc  Heap.cc  Heap.cpp  Kernel.cc  Kernel.cpp  Keymap.cc  Keymap.cpp  Mem.cc  Mem.cpp  Panic.cc  Pmm.cc  Pmm.cpp  Runtime.cc  Runtime.cpp  Scheduler.cc  SchedulerProcess.cc  SchedulerSignals.cc  Semaphore.cc  Serial.cc  Serial.cpp  Shell.cc  Shell.cpp  Symbols.cc  Syscall.cc  Taskbar.cc  Ubsan.cc  Ubsan.cpp  kernel.cpp  mem.cpp  runtime.cpp  runtime.h
kernel/programs/api/: Input.cc  Input.h  Screen.cc  Screen.h
kernel/programs/snake/: Snake.cc  Snake.h  SnakeGame.cc  SnakeGame.h
libc++/: CMakeLists.txt  Makefile
libc++/assert/: assertFail.cc  assertFail.cpp
libc++/ctype/: isalnum.cpp  isalpha.cpp  isblank.cpp  iscntrl.cpp  isdigit.cpp  isgraph.cpp  islower.cpp  isprint.cpp  ispunct.cpp  isspace.cpp  isupper.cpp  isxdigit.cpp  tolower.cpp  toupper.cpp
libc++/include/: algorithm  algorithm.h  array  assert.h  cassert  cctype  compare  cstddef  cstdint  cstdio  cstdlib  cstring  ctype.h  new  numeric  optional  span  stdint.h  stdio.h  stdlib.h  string  string.h  string_view  utility  volatile.h
libc++/include/sys/: cdefs.h  syscall.h
libc++/stdio/: format.cc  printf.cpp  putchar.cc  putchar.cpp  puts.cc  puts.cpp
libc++/stdlib/: abort.cc  abort.cpp  atoi.cc  atoi.cpp  atol.cc  atol.cpp  itos.cc  itos.cpp  ltos.cc  ltos.cpp  malloc.cc  strtol.cc  strtol.cpp  strtoll.cc  strtoll.cpp  strtoul.cc  strtoul.cpp  strtoull.cc  strtoull.cpp  udivmoddi3.cc  utos.cc  utos.cpp
libc++/string/: memchr.cc  memcmp.cc  memcmp.cpp  memcpy.cc  memcpy.cpp  memmove.cc  memmove.cpp  memset.cc  strchr.cc  strchr.cpp  strcmp.cc  strcmp.cpp  strcpy.cc  string.cc  string.cpp  strlen.cc  strlen.cpp  strncmp.cc  strncpy.cc  strrchr.cc  strstr.cc
tests/: CMakeLists.txt  Makefile  runtest.sh  stubs.cc  stubs.cpp  testconfig.sh
tests/cpu/: CpuStub.cc  CpuTestHooks.h  InterruptGuard.cc
tests/elf/: ElfLoadKernel.cc  ElfLoader.cc  ElfTestHelpers.h  UserElfTask.cc
tests/heap/: Alignment.cc  BackwardsCoalesce.cc  Fragmentation.cc  HeapFixture.h  IsInitialized.cc  Kfree.cc  Kmalloc.cc  Oom.cc  alignment.cc  alignment.cpp  backwards_coalesce.cc  fragmentation.cc  fragmentation.cpp  is_initialized.cc  kfree.cc  kmalloc.cc  kmalloc.cpp  oom.cc  oom.cpp
tests/kbd/: CapsIsCtrl.cc  KbdFixture.h  Keymap.cc  Modifiers.cc  Readline.cc  RingBuffer.cc  ScancodeTable.cc  TryReadKey.cc  caps_is_ctrl.cc  io_stubs.cpp  keymap.cc  modifiers.cc  readline.cc  readline.cpp  ring_buffer.cpp  scancode_table.cpp
tests/kernel/: Cmos.cc
tests/libc/: string.cpp
tests/libc++/algorithm/: all_of.cc  any_of.cc  clamp.cc  concepts.cc  copy.cc  count_if.cc  fill.cc  find.cc  max.cc  max.cpp  min.cc  min.cpp  none_of.cc  swap.cc  swap.cpp  swap_ranges.cc
tests/libc++/array/: array.cc
tests/libc++/ctype/: isalnum.cc  isalnum.cpp  isalpha.cc  isalpha.cpp  isblank.cc  isblank.cpp  iscntrl.cc  iscntrl.cpp  isdigit.cc  isdigit.cpp  isgraph.cc  isgraph.cpp  islower.cc  islower.cpp  isprint.cc  isprint.cpp  ispunct.cc  ispunct.cpp  isspace.cc  isspace.cpp  isupper.cc  isupper.cpp  isxdigit.cc  isxdigit.cpp  tolower.cc  tolower.cpp  toupper.cc  toupper.cpp
tests/libc++/numeric/: accumulate.cc
tests/libc++/optional/: optional.cc
tests/libc++/span/: span.cc
tests/libc++/stdio/: printf.cc  printf.cpp  putchar.cc  putchar.cpp  puts.cc  puts.cpp  snprintf.cc  sprintf.cc
tests/libc++/stdlib/: abort.cc  abs.cc  abs.cpp  atoi.cc  atoi.cpp  atol.cc  atol.cpp  div.cc  div.cpp  itos.cc  itos.cpp  ltos.cc  (+12 more)
tests/paging/: ClonePageDir.cc  Exec.cc  ExitCode.cc  Fork.cc  KernelSignals.cc  KillTaskCleanup.cc  PagingStub.cc  PagingTestAccess.h  PhysToVirt.cc  PmmStub.cc  PmmTestHooks.h  Refcount.cc  SchedulerPageDir.cc  Waitpid.cc
tests/panic/: TestPanic.cc  test_panic.cc
tests/pit/: PitTickless.cc  UptimeMath.cc  uptime_math.cpp
tests/scheduler/: FpuContext.cc  Init.cc  KillTask.cc  ProcessStubs.cc  RoundRobin.cc  SchedulerFixture.h  SchedulerTestAccess.h  Semaphore.cc  Signals.cc  Sleep.cc  StackFrame.cc  TaskInfo.cc  TaskStates.cc  Tickless.cc
tests/scripts/: posttest.sh  pretest.sh  runtest.sh
tests/shell/: ShellFixture.h  ShellTestAccess.h  TestHelpers.h  commands.cc  commands.cpp  dispatch.cc  dispatch.cpp  history.cc  history.cpp  tokenizer.cc  tokenizer.cpp
tests/snake/: Body.cc  BonusFood.cc  BoostZones.cc  Collision.cc  Direction.cc  Food.cc  Obstacles.cc  Prng.cc  SnakeFixture.h  stubs.cc
tests/string/: test_string.cpp
tests/symbols/: TestSymbols.cc  mock_table.cc
tests/syscall/: SyscallPoweroff.cc  SyscallRead.cc  SyscallSerial.cc
tests/tty/: Backspace.cc  Cursor.cc  Lock.cc  Scrollback.cc  Scrolling.cc  StringPuts.cc  TtyFixture.h  TtyTestAccess.h  VgaRam.cc  backspace.cc  backspace.cpp  cursor.cc  cursor.cpp  lock.cc  scrollback.cc  scrollback.cpp  string_puts.cc  vga_ram.cpp
(+185 files in other folders)
